
001 ==> 374787 : Release Notes are difficult to read because of color choices.
002 ==> 374784 - Startup wizard displays path to album with forward slashes.
003 ==> 374771 - Thumbnails for video files are gray.
004 ==> 366010 - Main menu bar is not translated (localized).
005 ==> 328321 - Image orientation is not maintained when processing RAW image through BQM.
006 ==> 374922 - digiKam crashes when dropping ext. image into fuzzy search target area.
007 ==> 375019 - Error updating scheme from digikam 4.
008 ==> 311652 - THUMBBAR : wrong items selection with shift key.
009 ==> 374671 - Breeze Icons missing dark icons.
010 ==> 375107 - Deleting a tag with 0 images from Tag Manager generates incorrect dialog - missing tag name.
011 ==> 375142 - The similarity calculated for the fuzzy image drop search is imprecise.
012 ==> 336253 - Create a New tag, Unconfirmed Faces [patch].
013 ==> 263400 - Newly detected faces should be stored in a dedicated virtual album for checking.
014 ==> 262168 - When adding name, the list should only contain people [patch].
015 ==> 373946 - digiKam freezes when trying to use "Upload".
016 ==> 367083 - Not Writing Labels to XMP Sidecar.
017 ==> 375108 - AppImage has no application icon showing in Ubuntu.
018 ==> 341758 - BQM Watermark tool : Option to set size based on given dimension.
019 ==> 371485 - GoogleMaps outdated.
020 ==> 375399 - No preview of video files.
021 ==> 375357 - No video preview.
022 ==> 375390 - "Set as Tag Thumbnail" in Tag View doesn't work.
023 ==> 375110 - Open with doesn't remember application association.
024 ==> 328457 - BQM Watermark tool : doesn't apply zero margins.
025 ==> 373756 - Display Names Are Not Updated in Regions When People Tag Changed.
026 ==> 374712 - Preview image does not work any more from thumbs view.
027 ==> 281742 - ICONVIEW : wrong selection start when browsing images.
028 ==> 375408 - Don't change context menu shortcut keys in single vs. multiple image context menus.
029 ==> 