@@ -38,4 +38,5 @@ BUGFIXES FROM BUGZILLA:
 026 ==> 374712 - Preview image does not work any more from thumbs view.
 027 ==> 281742 - ICONVIEW : wrong selection start when browsing images.
 028 ==> 375408 - Don't change context menu shortcut keys in single vs. multiple image context menus.
-029 ==> 
+029 ==> 375471 - Delete Selected Albums Dialogue Contains Duplicate Paths.
+030 ==> 
